adapt cond format range when copying sheets, fdo#56742

Change-Id: I9b28ac161f326ebeeaf0fa22e0a96915187d7c94
(cherry picked from commit 1c60abfdb617039cedc53982c7c8eca640e28cac)

Signed-off-by: Eike Rathke <erack@redhat.com>